service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework01-service
spec:
  selector:
    app: homework01-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
